# rag-advanced

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  plan.md  pyproject.toml  streamlit-rag-ui-guide.md  test_env.py
.github/workflows/: ci.yml  mypy.yml
app/config/: default.yaml
app/config/flows/: hybrid.yaml  hyde.yaml  multi_hop.yaml  raptor.yaml  standard.yaml
app/core/: answer_format.py  answer_guard.py  citations.py  embeddings.py  envelope.py  generator.py  indexer.py  logging_setup.py  models.py  orchestrator.py  snippets.py  splitter.py  storage.py  types.py  utils.py
app/core/flows/: __init__.py  base.py  guardrails.py  hybrid.py  hyde.py  multi_hop.py  raptor.py  registry.py  standard.py
app/core/memory/: summarizer.py  window.py
app/core/metrics/: ragas_wrap.py  raglite.py  token_cost.py  token_estimate.py
app/core/prompting/: builder.py
app/core/retrievers/: bm25.py  dense.py  (+2 more)
app/scripts/: eval_offline.py  ingest.py
app/ui/: streamlit_app.py
scripts/: dev_check.ps1  dev_check.sh  setup.bat  setup.sh
tests/: test_admin_settings.py  test_answer_guard.py  test_citations.py  test_embeddings.py  test_embeddings_old.py  test_flow_guardrails.py  test_flow_hyde.py  test_flow_multi_hop.py  test_flow_raptor.py  test_flow_standard_rerank.py  test_flows.py  test_generator.py  test_hybrid_recency.py  test_hybrid_rrf.py  test_indexer.py  test_memory_window.py  test_metrics_lite.py  test_metrics_raglite.py  test_multi_query.py  test_orchestrator.py  test_orchestrator_hybrid_params.py  test_prompt_builder.py  test_prompt_builder_edge.py  test_ragas_toggle.py  test_ragas_wrap.py  test_registry_defaults.py  test_rerank_fallback.py  test_rerank_mmr.py  test_reranker.py  test_retrievers.py  test_rrf_fuse_multi.py  test_single_query_rrf_fuse.py  test_snippets.py  test_storage.py  test_stream_multi_query.py  test_summary_memory.py  test_ui_actions.py
(+8 files in other folders)
