[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-advanced-local"
version = "1.0.0"
description = "Local-first modular RAG app with Streamlit"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "RAG Advanced Authors" }]
license = { text = "MIT" }

dependencies = [
  "streamlit>=1.36,<1.49",
  "faiss-cpu>=1.8.0.post1; platform_system != 'Windows'",
  "rank-bm25>=0.2.2",
  "sumy>=0.11.0",
  "jinja2>=3.1.4",
  "omegaconf>=2.3.0",
  "structlog>=24.1.0",
  "pypdf>=4.2.0",
  "python-dotenv>=1.0.1",
  "tiktoken>=0.7.0",
  "typer>=0.12.3",
  "prometheus-client>=0.20.0",
  "pandas>=2.2.2",
  "numpy>=2.0.1,<3",
  "scikit-learn>=1.5.1",
  "SQLAlchemy>=2.0.31",
  "sqlite-utils>=3.36",
  "openai>=1.40.3",
]

[project.optional-dependencies]
offline = [
  "sentence-transformers>=3.0.1",
]
eval = [
  "ragas>=0.1.14",
  "datasets>=2.19.0",
]
full = [
  "ragas>=0.1.14",
  "datasets>=2.19.0",
  "sentence-transformers>=3.0.1",
  "chromadb>=0.5.3",
  "llama-cpp-python>=0.2.90",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
  "ignore:.*numpy\\.core\\._multiarray_umath.*:DeprecationWarning",
  "ignore::DeprecationWarning:faiss\\.loader",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*", "scripts*"]

[tool.setuptools.package-data]
app = [
  "**/*.j2",
  "**/*.yaml",
  "**/*.toml",
  "**/*.md",
  "**/*.txt",
  "**/*.csv",
  "**/*.json",
]

[project.scripts]
rag-advanced-ingest = "app.scripts.ingest:app"
rag-advanced-eval-offline = "app.scripts.eval_offline:app"
